--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,7 +27,7 @@
                                 <input type="password" name="password" id="password" class="form-control">
                             </div>
                             <div class="form-group">                
-                                <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
+                                <input type="submit" name="submit" class="btn btn-info btn-md" value="Submit">
                             </div>
                             <div id="register-link" class="text-right">
                                 <a href="/users/signup" class="text-info">Register here</a>
