--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -39,7 +39,7 @@
                                 <input type="password" name="confirmpassword" id="confirmpassword" class="form-control">
                             </div>
                             <div class="form-group">                
-                                <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
+                                <input type="submit" name="submit" class="btn btn-info btn-md" value="Submit">
                             </div>
                             <div id="register-link" class="text-right">
                                 <a href="/users/login" class="text-info">Sign In here</a>
